# frida-core

./: .gitmodules  meson.build  meson.options
inject/: inject.vala
src/: meson.build
src/gdbstub/: gdbstub.resources  gdbstub.vala  generate-frida-gdbstub.py  meson.build
subprojects/: frida-gum.wrap
tests/: runner.vala  test-host-session.vala
tests/labrats/: meson.build
